# Rust-One-Shots

dice_game/: Cargo.toml
dice_game/src/: main.rs
roman_integers/: Cargo.toml
roman_integers/src/: main.rs
rust_souls_companion/: Cargo.toml  game_data.txt  player_list.txt
rust_souls_companion/src/: character.rs  companion.rs  game.rs  main.rs  player.rs
