[package]
name = "rust_souls_companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui_extras = "0.22.0"
egui-dropdown = "0.3.0"
chrono = "0.4.26"
image = "0.24.6"
rand = "0.8.5"